--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,6 @@ version: "3"
 services:
   hub:
     image: selenium/hub:3.14
-    ports:
-      - "4444:4444"
   chrome:
     image: selenium/node-chrome:3.14
     depends_on:
@@ -30,19 +28,8 @@ services:
       - BROWSER=chrome
       - MODULE=search-module.xml
     volumes:
-      - ./search-result:/usr/share/udemy/test-output
+      - ./output/search-result:/usr/share/udemy/test-output
   book-flight-module1:
-    image: rambodocker909/selenium-docker
-    depends_on:
-      - chrome 
-      - firefox
-    environment:
-      - HUB_HOST=hub
-      - BROWSER=chrome
-      - MODULE=book-flight-module.xml
-    volumes:
-      - ./book-result1:/usr/share/udemy/test-output
-  book-flight-module2:
     image: rambodocker909/selenium-docker
     depends_on:
       - chrome 
@@ -52,4 +39,4 @@ services:
       - BROWSER=firefox
       - MODULE=book-flight-module.xml
     volumes:
-      - ./book-result2:/usr/share/udemy/test-output
+      - ./output/book-result:/usr/share/udemy/test-output
