update the module name in ymal filr

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - MODULE=search-module.xml
     volumes:
       - ./output/search-result:/usr/share/udemy/test-output
-  book-flight-module1:
+  book-flight-module:
     image: rambodocker909/selenium-docker
     depends_on:
       - chrome 
